@@ -1,17 +1,18 @@
 package io.quarkiverse.quarkus.wasm.runtime;
 
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
-import org.extism.sdk.Plugin;
-import org.extism.sdk.manifest.Manifest;
-import org.extism.sdk.wasm.WasmSourceResolver;
+import org.extism.chicory.sdk.Manifest;
+import org.extism.chicory.sdk.Plugin;
 import org.jboss.logging.Logger;
 
+import com.dylibso.chicory.runtime.HostFunction;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
 import io.quarkiverse.quarkus.wasm.runtime.config.FilterChainConfig;
@@ -26,16 +27,15 @@ public class FilterChainProvider {
     Path configPath = Path.of(System.getProperty("user.dir")).resolve("config");
 
     public FilterChain createFromConfig(FilterChainConfig cfg) throws IOException {
-        WasmSourceResolver wasmSourceResolver = new WasmSourceResolver();
         var plugins = new ArrayList<WasmFilter>();
         for (var plugin : cfg.plugins()) {
             WasmFilter wasmFilter;
             switch (plugin.type()) {
                 case "filesystem":
-                    wasmFilter = loadFromFileSystem(plugin, wasmSourceResolver);
+                    wasmFilter = loadFromFileSystem(plugin);
                 case "resource":
                 default:
-                    wasmFilter = loadFromResource(plugin, wasmSourceResolver);
+                    wasmFilter = loadFromResource(plugin);
             }
             plugins.add(wasmFilter);
         }
@@ -43,23 +43,23 @@ public class FilterChainProvider {
         return new FilterChain(mapper, plugins);
     }
 
-    private WasmFilter loadFromFileSystem(FilterChainConfig.Plugin plugin, WasmSourceResolver wasmSourceResolver)
+    private WasmFilter loadFromFileSystem(FilterChainConfig.Plugin plugin)
             throws IOException {
-        var wasmSource = wasmSourceResolver.resolve(plugin.name(), configPath.resolve(plugin.name() + ".wasm"));
-        var manifest = new Manifest(wasmSource);
-        return new WasmFilter(plugin.name(), new Plugin(manifest, true, null));
+        var manifest = Manifest.fromFilePath(configPath.resolve(plugin.name() + ".wasm"));
+        return new WasmFilter(plugin.name(), new Plugin(manifest, new HostFunction[0], null));
     }
 
-    private WasmFilter loadFromResource(FilterChainConfig.Plugin plugin, WasmSourceResolver wasmSourceResolver)
+    private WasmFilter loadFromResource(FilterChainConfig.Plugin plugin)
             throws IOException {
         String pluginPath = "/" + plugin.name() + ".wasm";
         try (var wasmStream = Thread.currentThread().getContextClassLoader().getResourceAsStream(pluginPath)) {
             if (wasmStream == null) {
                 throw new WasmFilterCreationException("Cannot load plugin " + plugin.name());
             }
-            var wasmSource = wasmSourceResolver.resolve(plugin.name(), wasmStream.readAllBytes());
-            var manifest = new Manifest(wasmSource);
-            return new WasmFilter(plugin.name(), new Plugin(manifest, true, null));
+            Path tempFile = Files.createTempFile("chicory-temp", plugin.name());
+            Files.write(tempFile, wasmStream.readAllBytes());
+            var manifest = Manifest.fromFilePath(tempFile);
+            return new WasmFilter(plugin.name(), new Plugin(manifest, new HostFunction[0], null));
         }
     }
 }
